--- a/libftprintf/get_next_line/Makefile
+++ b/libftprintf/get_next_line/Makefile
@@ -5,32 +5,31 @@
 #                                                     +:+ +:+         +:+      #
 #    By: bmuni <marvin@42.fr>                       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2022/10/23 19:14:06 by bmuni             #+#    #+#              #
-#    Updated: 2023/04/11 15:46:12 by bmuni            ###   ########.fr        #
+#    Created: 2022/11/06 12:53:24 by bmuni             #+#    #+#              #
+#    Updated: 2022/11/06 13:04:56 by bmuni            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME=libftprintf.a
+NAME=getnextline.a
 
 all: $(NAME)
 
 $(NAME):
-	make bonus -C libft
-	make bonus -C get_next_line
-	gcc -Wall -Wextra -Werror -c ft_printf.c ft_printf_nbr.c
-	ar -rc $(NAME) *.o libft/*.o get_next_line/*.o
+	gcc -Wall -Wextra -Werror -D BUFFER_SIZE=100 -c get_next_line.c get_next_line_utils.c
+	ar -rc $(NAME) *.o
+	ranlib $(NAME)
+
+bonus:
+	gcc -Wall -Wextra -Werror -D BUFFER_SIZE=100 -c get_next_line_bonus.c get_next_line_utils_bonus.c
+	ar -rc $(NAME) *.o
 	ranlib $(NAME)
 
 clean:
 	rm -f *.o
-	rm -f libft/*.o
-	rm -f get_next_line/*.o
 
 fclean: clean
 	rm -f $(NAME)
-	rm -f libft/libft.a
-	rm -f get_next_line/getnextline.a
 
 re: fclean all
 
-.PHONY: all, clean, fclean, re
+.PHONY: all, clean, fclean, re, bonus
